<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="weeblycom.gfportfolio.gavinfarnsworth.canibuyit.AddAccount"
    android:background="@color/color200">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/nameline_add_activity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/accountName"
                android:id="@+id/namelbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText_add_account"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/typeline_add_activity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/type"
                android:id="@+id/typelbl_add_account" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeSpinner_add_account" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/bankline_add_activity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bank"
                android:id="@+id/banklbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bankEditText_add_account"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/currentline_add_activity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/current"
                android:id="@+id/currentlbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/currentAmount_add_account"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/availableline_add_activity"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/available"
                android:id="@+id/availablelbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/availableEditText_add_activity"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/interestline_add_activity"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/interest"
                android:id="@+id/interestlbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/interestEditText_add_account"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/limitline_add_activity"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/limit"
                android:id="@+id/limitlbl_add_activity" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/limitEditText_add_activity"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/duedateline_add_activity"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dueDate"
                android:id="@+id/dueDatelbl_add_activity" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickADate"
                android:id="@+id/pickDateButton_add_activity"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/color200"
                android:backgroundTint="@color/color200"
                android:translationZ="0dp"
                style="?android:attr/borderlessButtonStyle"
                android:elevation="0dp"
                android:textColor="@color/color900"
                android:onClick="datePickerClick"
                android:textSize="@dimen/abc_text_size_medium_material" />

        </LinearLayout>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/transactions"
            android:id="@+id/viewTransactionsButton_add_account"
            android:layout_weight="0"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/color200"
            android:backgroundTint="@color/color200"
            android:translationZ="0dp"
            android:elevation="0dp"
            android:textColor="@color/color900"
            android:onClick="datePickerClick"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="right" />
    </LinearLayout>
</RelativeLayout>
