<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="weeblycom.gfportfolio.gavinfarnsworth.canibuyit.AddTransaction"
    android:background="@color/color200">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name"
                android:id="@+id/locationlbl_add_trans" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_add_trans"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/type"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeSpinner_add_transaction"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cost"
                android:id="@+id/amountlbl_add_trans" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amount_add_trans"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/account"
                android:id="@+id/accountlbl_add_trans" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accountSpinner_add_tran"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date"
                android:id="@+id/datelbl_add_trans"
                android:textSize="@dimen/abc_text_size_large_material" />

            <Button
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/pickADate"
                android:id="@+id/payDatePick_add_trans"
                android:layout_weight="1"
                android:background="@null"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/color900"
                android:onClick="datePickerClick"
                android:textSize="@dimen/abc_text_size_medium_material" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/dueDateLayout_add_transaction"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dueDate"
                android:id="@+id/dueDatelbl_add_trnas" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickADate"
                android:id="@+id/dueDatePick_add_trans"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/color200"
                android:backgroundTint="@color/color200"
                android:translationZ="0dp"
                style="?android:attr/borderlessButtonStyle"
                android:elevation="0dp"
                android:textColor="@color/color900"
                android:onClick="datePickerClick"
                android:textSize="@dimen/abc_text_size_large_material" />


        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="109dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/deleteButton_add_trans"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_delete"
                android:background="@color/color700"
                android:onClick="deleteClick" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="3" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/saveButton_add_trans"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_save"
                android:background="@color/color700"
                android:onClick="saveClick" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
<!--
       this.name = name;
    this.cost = cost;
    this.date = date;
    this.category = category;
    this.deposit = deposit;
    this.accountID = accountID;
    due date-->
